// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Related articles test on android Related articles handles no related articles 1`] = `null`;

exports[`Related articles test on android Related articles renders single related article 1`] = `
<RCTScrollView
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#dbdbdb",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "borderTopColor": "#dbdbdb",
          "borderTopWidth": 0.5,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 26,
          }
        }
      >
        Related links
      </Text>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                aspectRatio={1.7777777777777777}
                style={Object {}}
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996&preview=true",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          Object {
                            "height": "100%",
                            "width": "100%",
                          },
                          undefined,
                        ]
                      }
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 1.2,
                        "lineHeight": 12,
                        "marginBottom": -4,
                        "paddingTop": 5,
                      },
                      Object {
                        "color": "#333333",
                      },
                    ]
                  }
                >
                  B A Y E U X   T A P E S T R Y
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Camilla Long, Environment Editor
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Related articles test on android Related articles renders single related article with no byline 1`] = `
<RCTScrollView
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#dbdbdb",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "borderTopColor": "#dbdbdb",
          "borderTopWidth": 0.5,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 26,
          }
        }
      >
        Related links
      </Text>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                aspectRatio={1.7777777777777777}
                style={Object {}}
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996&preview=true",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          Object {
                            "height": "100%",
                            "width": "100%",
                          },
                          undefined,
                        ]
                      }
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 1.2,
                        "lineHeight": 12,
                        "marginBottom": -4,
                        "paddingTop": 5,
                      },
                      Object {
                        "color": "#333333",
                      },
                    ]
                  }
                >
                  B A Y E U X   T A P E S T R Y
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Related articles test on android Related articles renders single related article with no label 1`] = `
<RCTScrollView
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#dbdbdb",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "borderTopColor": "#dbdbdb",
          "borderTopWidth": 0.5,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 26,
          }
        }
      >
        Related links
      </Text>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                aspectRatio={1.7777777777777777}
                style={Object {}}
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996&preview=true",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          Object {
                            "height": "100%",
                            "width": "100%",
                          },
                          undefined,
                        ]
                      }
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Charles Bremner, Paris | Jack Malvern
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Related articles test on android Related articles renders single related article with no lead image 1`] = `
<RCTScrollView
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#dbdbdb",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "borderTopColor": "#dbdbdb",
          "borderTopWidth": 0.5,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 26,
          }
        }
      >
        Related links
      </Text>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 1.2,
                        "lineHeight": 12,
                        "marginBottom": -4,
                        "paddingTop": 5,
                      },
                      Object {
                        "color": "#333333",
                      },
                    ]
                  }
                >
                  B A Y E U X   T A P E S T R Y
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Charles Bremner, Paris | Jack Malvern
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Related articles test on android Related articles renders two related articles 1`] = `
<RCTScrollView
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#dbdbdb",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "borderTopColor": "#dbdbdb",
          "borderTopWidth": 0.5,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 26,
          }
        }
      >
        Related links
      </Text>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                aspectRatio={1.7777777777777777}
                style={Object {}}
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996&preview=true",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          Object {
                            "height": "100%",
                            "width": "100%",
                          },
                          undefined,
                        ]
                      }
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 1.2,
                        "lineHeight": 12,
                        "marginBottom": -4,
                        "paddingTop": 5,
                      },
                      Object {
                        "color": "#333333",
                      },
                    ]
                  }
                >
                  B A Y E U X   T A P E S T R Y
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Camilla Long, Environment Editor
                </Text>
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          testID={undefined}
        >
          <View
            style={
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 0.5,
                "borderStyle": "solid",
                "paddingBottom": 10,
                "paddingLeft": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                aspectRatio={1.7777777777777777}
                style={Object {}}
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F82723c10-fb7f-11e7-a987-7fcf5e9983dc.jpg?crop=4886%2C2748%2C92%2C108&resize=996&preview=true",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F82723c10-fb7f-11e7-a987-7fcf5e9983dc.jpg?crop=4886%2C2748%2C92%2C108&resize=996",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          Object {
                            "height": "100%",
                            "width": "100%",
                          },
                          undefined,
                        ]
                      }
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 1.2,
                        "lineHeight": 12,
                        "marginBottom": -4,
                        "paddingTop": 5,
                      },
                      Object {
                        "color": "#333333",
                      },
                    ]
                  }
                >
                  B A Y E U X   T A P E S T R Y
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "TimesModern-Bold",
                      "fontWeight": "400",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontSize": 22,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                Bayeux Tapestry to be displayed in Britain
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
                testID="datePublication"
              >
                Wednesday January 17 2018, 12:00pm
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Camilla Long, Environment Editor
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
